# dhi-search-mcp

./: .dockerignore  Dockerfile  README.md  docker-bake.hcl  mcp-search-dhi.yaml  pyproject.toml  server.yaml
src/dhi_search_mcp/: __init__.py  core.py  server.py
