[project]
name = "dhi-search-mcp"
version = "0.1.0"
description = "MCP server for Docker Hardened Image catalog search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
    "requests>=2.31.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.21.0",
]

[project.scripts]
dhi-search = "dhi_search_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dhi_search_mcp"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = ["src/dhi_search_mcp"]

